--- a/Objects/01_CreateObject_test.html
+++ b/Objects/01_CreateObject_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="CreateObject.js"></script>
+	<script src="01_CreateObject.js"></script>
 </head>
 <body>
 
